# google-scholar-citing

./: .gitignore  README.md  authors.py  main.py  pyproject.toml
src/: __init__.py  scholar.py
src/google_scholar_citing/: scholar.py  types.py
