[project]
name = "google-scholar-citing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HellOwhatAs", email = "xjq701229@outlook.com" }
]

requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "jupyter>=1.1.1",
    "lxml>=5.4.0",
    "pyfilecache>=0.1.6",
    "requests>=2.32.3",
    "selenium>=4",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]
